# OpenInfoCollecter_ValidateYourClient

./: CMakeLists.txt  README.md  telemetry.c
.github/workflows/: build.yml
